# spheri

./: README.md  setup.cfg
demo/: demo.ipynb  diplib.ipynb  labels.tif  labels_mopholibj.csv  sphere.tif  sphere_mopholibj.csv  vedo.ipynb
src/soli/: __init__.py  _statistics.py
src/soli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
