[metadata]
name = soli
version = attr: soli.__version__
description = A library for feature extraction from 3D label images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/haesleinhuepf/soli
author = Robert Haase
author_email = robert.haase@uni-leipzig.de
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/soli/issues
    Documentation = https://github.com/haesleinhuepf/soli#README.md
    Source Code = https://github.com/haesleinhuepf/soli
    User Support = https://github.com/haesleinhuepf/soli/issues

[options]
packages = find:
install_requires =
    numpy
    vedo
    diplib>=3.4.3
    scikit-image

python_requires = >=3.9
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/


[options.package_data]
* = *.yaml
